# ai-driven-textbook

./: .env.example  .gitignore  GEMINI.md  QWEN.md  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  vercel.json
.claude/agents/: ros2-content-expert.md
.claude/skills/: claude.md
.specify/memory/: constitution.md  constitution_draft.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
auth-backend/: README.md  package-lock.json  package.json  tsconfig.json  vercel.json
auth-backend/src/: server.ts
docs/: intro.md
docs/hardware/: index.md
docs/intro/: index.md  learning-outcomes.md  quarter-overview.md  weekly-breakdown.md  why-physical-ai.md
docs/module-1/: 01-introduction-to-ros2.md  02-ros2-nodes-deep-dive.md  03-topics-and-publishers.md  04-subscribers-and-callbacks.md  05-services-request-response.md  06-actions-long-running-tasks.md  07-urdf-for-humanoid-robots.md
docs/module-2/: 01-introduction-to-gazebo.md  02-urdf-sdf-robot-description.md  04-sensor-simulation-lidar-depth-imu.md  (+2 more)
rag_backend/: .env.example  Dockerfile  README.md  inspect_qdrant.py  inspect_qdrant_2.py  inspect_qdrant_3.py  pyproject.toml  requirements.txt
rag_backend/api/: index.py
rag_backend/app/: main.py
rag_backend/app/api/: chat.py
rag_backend/app/core/: agent_builder.py  config.py  memory.py  neon_service.py  qdrant_service.py  retriever.py
rag_backend/app/models/: error.py  message.py  retrieval.py  session.py
rag_backend/rag_chatbot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+79 files in other folders)
