[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-chatbot-backend"
version = "0.1.0"
description = "RAG Chatbot Backend Service for Physical AI & Humanoid Robotics Textbook"
readme = "README.md"
authors = [{name = "AI Developer", email = "dev@example.com"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "groq>=0.4.1",
    "qdrant-client>=1.8.0",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.1.12",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "openai>=1.10.0",
    "cohere>=5.5.0",
    "sse-starlette>=1.8.2",
    "cachetools>=5.3.2",
    "mangum>=0.17.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "mypy>=1.4.1",
    "isort>=5.12.0",
    "pre-commit>=3.3.3"
]

[project.urls]
Homepage = "https://github.com/your-org/ai-driven-textbook"
Repository = "https://github.com/your-org/ai-driven-textbook"

[tool.setuptools.packages.find]
where = ["."]